FIxed overflow in applist

--- a/src/sass/X/applist.sass
+++ b/src/sass/X/applist.sass
@@ -17,16 +17,21 @@
         position: relative
         display: flex
         flex: 1 1 auto
-        padding: 0px 8px
+        padding: 0px 0.6em
         align-items: center
         white-space: nowrap
         height: 100%
         max-width: 11rem
-        text-overflow: ellipsis
         font-size: 0.8em
         font-weight: 100
         cursor: pointer
         column-gap: 0.4em
+        *
+            margin: auto 0em
+        span
+            overflow: hidden
+            text-overflow: ellipsis
+            width:
         img
             height: 50%
         &:hover
